@@ -1,3 +1,13 @@
+2007-10-06  Nikolas Zimmermann  <zimmermann@kde.org>
+
+        Reviewed by Oliver.
+
+        Never pass null input images to CICrop filter.
+
+        * platform/graphics/svg/filters/cg/SVGFEComponentTransferCg.mm:
+        (WebCore::SVGFEComponentTransfer::getCIFilter):
+        * platform/graphics/svg/filters/cg/SVGFEHelpersCg.h:
+
 2007-10-06  Mark Rowe  <mrowe@apple.com>
 
         Reviewed by Alp Toker.
